--- a/package.json
+++ b/package.json
@@ -1,44 +1,54 @@
 {
-  "name": "vs-ext-deepseek-chat",
-  "displayName": "vs-ext-deepseek-chat",
-  "description": "",
-  "version": "0.0.1",
-  "engines": {
-    "vscode": "^1.96.0"
-  },
-  "categories": [
-    "Other"
-  ],
-  "activationEvents": [],
-  "main": "./out/extension.js",
-  "contributes": {
-    "commands": [
-      {
-        "command": "vs-ext-deepseek-chat.deepSeekChat",
-        "title": "Chat with DeepSeek"
-      }
-    ]
-  },
-  "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
-    "lint": "eslint src",
-    "test": "vscode-test"
-  },
-  "devDependencies": {
-    "@types/mocha": "^10.0.10",
-    "@types/node": "20.x",
-    "@types/vscode": "^1.96.0",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
-    "@typescript-eslint/parser": "^8.17.0",
-    "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1",
-    "eslint": "^9.16.0",
-    "typescript": "^5.7.2"
-  },
-  "dependencies": {
-    "ollama": "^0.5.13"
-  }
+	"name": "vs-ext-deepseek-chat",
+	"displayName": "vs-ext-deepseek-chat",
+	"description": "",
+	"version": "0.0.1",
+	"engines": {
+		"vscode": "^1.96.0"
+	},
+	"categories": [
+		"Other"
+	],
+	"activationEvents": [],
+	"main": "./out/extension.js",
+	"contributes": {
+		"commands": [
+			{
+				"command": "vs-ext-deepseek-chat.deepSeekChat",
+				"title": "Chat with DeepSeek"
+			}
+		]
+	},
+	"scripts": {
+		"compile": "npm run check-types && node esbuild.js",
+		"compile_tsc": "tsc -p ./",
+		"lint": "eslint src",
+		"package": "npm run check-types && node esbuild.js --production",
+		"pretest": "npm run compile && npm run lint",
+		"test": "vscode-test",
+		"vscode:prepublish": "npm run package",
+		"vscode:compile": "npm run compile",
+		"watch": "npm-run-all -p watch:*",
+		"watch2": "tsc -watch -p ./",
+		"watch:tsc": "tsc --noEmit --watch --project tsconfig.json"
+	},
+	"devDependencies": {
+		"@types/mocha": "^10.0.10",
+		"@types/node": "20.x",
+		"@types/vscode": "^1.96.0",
+		"@typescript-eslint/eslint-plugin": "^8.17.0",
+		"@typescript-eslint/parser": "^8.17.0",
+		"@vscode/test-cli": "^0.0.10",
+		"@vscode/test-electron": "^2.4.1",
+		"esbuild": "^0.25.2",
+		"eslint": "^9.16.0",
+		"npm-run-all": "^4.1.5",
+		"typescript": "^5.7.2",
+		"webpack": "^5.99.5",
+		"webpack-cli": "^6.0.1"
+	},
+	"dependencies": {
+		"ollama": "^0.5.13"
+	},
+	"packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
